
   FALCON-581 Refactor code for cross product and make it a method 
   (Raghav Kumar Gautam via Arpit Gupta) 
   
   FALCON-597 String logged at the start and end of the merlin test are slightly 
   mismatched (Raghav Kumar Gautam via Arpit Gupta)

  OPTIMIZATIONS
   FALCON-681 delete duplicate feed retention test from falcon regression (SamarthG)

  BUG FIXES
   FALCON-1221 RescheduleProcessInFinalStatesTest.checkNotFoundDefinition() needs to be case flexible
   (Raghav Kumar Gautam)

   FALCON-1218 Minor fix for testFeedListingAfterFeedDataPathUpdate & testFeedListingAfterFeedAvailabilityFlagUpdate
   (Raghav Kumar Gautam)

   FALCON-1183 Fix expected response in testScheduleDeletedFeedOnBothColosUsingColoHelper
   (Ruslan Ostafiychuk)

   FALCON-1176 Fixing EntitiesPatternSearchTest failing as a result of FALCON-1158 (Pragya Mittal
   via Ruslan Ostafiychuk)

   FALCON-1177 Changing method modifier to make it be not concerned as a test (Paul Isaychuk via
   Ruslan Ostafiychuk)

   FALCON-1166 Fixing FeedReplicationTest, TouchAPIPrismAndServerTest, ProcessLibPathLoadTest
   (Pragya Mittal via Ruslan Ostafiychuk)

   FALCON-1155 Unwanted character at the end of workflow.xml (Karishma Gulati via Ruslan Ostafiychuk)

   FALCON-1072 Dumping of Oozie info should use os specific newline (Raghav Kumar Gautam)

   FALCON-1018 Enable and fix FalconClientTest#badClusterSubmit (Paul Isaychuk via Ruslan Ostafiychuk)

   FALCON-1005 In ProcessInstanceSuspendTest clean test dir after each method execution
   (Paul Isaychuk via Ruslan Ostafiychuk)

   FALCON-990 Fix and enable 3/4 tests of RescheduleProcessInFinalStatesTest (Ruslan Ostafiychuk)

   FALCON-951 Adding wait till instance goes into running for tests in falcon trunk
   (Pragya Mittal via Raghav Kumar Gautam)

   FALCON-955 enable and fix feedAclUpdate and processAclUpdate tests (Raghav Kumar Gautam via
   Ruslan Ostafiychuk)

   FALCON-948 Enabling late rerun tests (Paul Isaychuk via Ruslan Ostafiychuk)
